fix: downgrade Tailwind for Netlify build

--- a/src/output.css
+++ b/src/output.css
@@ -279,7 +279,7 @@
     gap: calc(var(--spacing) * 6);
   }
   .rounded-full {
-    border-radius: calc(infinity * 1px);
+    border-radius: 9999px;
   }
   .rounded-md {
     border-radius: var(--radius-md);
